[package]
name = "chiprust-emu"
description = "Chip-8 emulator."
repository = "https://github.com/Maxxls/chiprust-emu"
version = "0.2.1"
authors = ["Maxim Kuznetsov <maximxlssoff@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
